<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the Crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_title">Crime Title</string>
    <string name="crime_date">Crime Date</string>
    <string name="desc_image_view">imageView</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show subtitle</string>
    <string name="hide_subtitle">Hide subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
</resources>
